--- a/question/single_question/styles.css
+++ b/question/single_question/styles.css
@@ -60,19 +60,39 @@ table th {
   text-align: left;
 }
 
-#next-question-button {
-  display: block; /* ボタンをブロックレベルにして幅を100%に対応させる */
-  margin: 20px auto; /* 上下のマージンを20px、左右を自動にして中央揃え */
-  padding: 15px 30px; /* パディングを大きくしてボタンを大きくする */
-  font-size: 18px; /* フォントサイズを大きくする */
+button {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px;
+  font-size: 16px;
   background-color: #333;
   color: white;
   border: none;
   cursor: pointer;
-  width: 80%; /* ボタンの幅を80%に設定 */
-  max-width: 300px; /* ボタンの最大幅を300pxに設定 */
+  width: 50px;
+}
+
+button:hover {
+  background-color: #555;
+}
+
+#next-question-button {
+  display: block;
+  margin: 20px auto;
+  padding: 15px 30px;
+  font-size: 18px;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 80%;
+  max-width: 300px;
 }
 
 #next-question-button:hover {
   background-color: #555;
+}
+
+.option-text {
+  margin: 10px 0;
 }
