--- a/feedback/styles.css
+++ b/feedback/styles.css
@@ -4,6 +4,32 @@ body {
     margin: 0;
 }
 
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+header h1 {
+    margin: 0;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
 .container {
     display: flex;
     justify-content: center;
