--- a/feedback/styles.css
+++ b/feedback/styles.css
@@ -1,10 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    padding-top: 60px; /* ヘッダーの高さ分のパディングを追加 */
+    background-color: #f4f4f4;
 }
 
 header {
@@ -39,23 +38,25 @@ nav ul li a {
 }
 
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 60px); /* ヘッダーの高さを引いた分の高さを指定 */
-    padding: 20px; /* コンテナの上に少しパディングを追加 */
+    padding: 20px;
+    padding-top: 60px; /* ヘッダーの高さ分のパディングを追加 */
 }
 
 .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     max-width: 640px;
-    height: 100%;
-    padding: 20px; /* フォームとコンテナの間にスペースを追加 */
-    box-sizing: border-box; /* パディングを含むサイズ計算 */
+    margin: 0 auto;
 }
 
 iframe {
     border: none;
     width: 100%;
     height: 800px;
+}
+
+h3 {
+    color: red; 
 }
