--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,9 @@ main {
 h3 {
   color: red; 
 }
+
+@media (max-width: 600px) {
+    header h1 {
+        font-size: 18px; /* スマホでのフォントサイズ */
+    }
+}
