--- a/question/mock_test/setting/styles.css
+++ b/question/mock_test/setting/styles.css
@@ -43,59 +43,34 @@ main {
   align-items: center;
 }
 
-.toggle-container label {
-  margin-right: 10px;
-}
-
 .toggle-label {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 30px;
-  background-color: #ccc;
-  border-radius: 15px;
-  cursor: pointer;
   margin-right: 10px;
-  transition: background-color 0.3s;
+  font-weight: bold;
 }
 
-.toggle-label input {
+input[type="radio"] {
   display: none;
 }
 
 .toggle-button {
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  transform: translateY(-50%);
-  width: 50%;
-  height: 80%;
-  background-color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+  margin: 0;
+  background-color: #ccc;
+  color: #000;
+  border: 1px solid #000;
   border-radius: 5px;
-  transition: left 0.3s;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.toggle-label input:checked + .toggle-button {
-  left: 55%;
-  background-color: #4caf50;
+input[type="radio"]:checked + .toggle-button {
+  background-color: #007bff;
+  color: #fff;
 }
 
-.toggle-label input:checked + .toggle-button:before {
-  content: 'オン';
-  color: white;
-  position: absolute;
-  left: 15%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.toggle-label input:not(:checked) + .toggle-button:before {
-  content: 'オフ';
-  color: white;
-  position: absolute;
-  left: 85%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+input[type="radio"]:checked + .toggle-button + input[type="radio"] + .toggle-button {
+  background-color: #ccc;
+  color: #000;
 }
 
 table {
