--- a/question/single_question/styles.css
+++ b/question/single_question/styles.css
@@ -82,7 +82,6 @@ table th {
   background-color: #f2f2f2;
 }
 
-
 .option-text {
   margin: 10px 0;
 }
@@ -124,4 +123,11 @@ button:hover {
     header h1 {
         font-size: 18px; /* スマホでのフォントサイズ */
     }
+}
+
+/* 縦並び用の新しいCSSクラス */
+.vertical-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
