--- a/question/single_question/styles.css
+++ b/question/single_question/styles.css
@@ -84,7 +84,12 @@ table th {
 
 
 .option-text {
-  margin: 10px 0;
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  border-collapse: collapse;
+  margin-bottom: 20px;
 }
 
 button {
